
* #10896: Remove Stream, Genlex and Pervasives. Also remove legacy standalone
  bigarray library (the Bigarray module is now part of the standard library).
  (Nicolás Ojeda Bär, review by Kate Deplaix and Anil Madhavapeddy)

* #10924: Add deprecated attribute to Printexc.catch, Printf.kprintf and
  Unix.SO_ERROR.
  (Nicolás Ojeda Bär, review by Damien Doligez)

### Other libraries:

* #9071, #9100, #10935: Reimplement `Thread.exit()` as raising the
  exception `Thread.Exit`, and mark `Thread.exit` as deprecated.
  The new implementation changes the behavior compared with
  the OCaml 4 implementation.  For example, the new implementation
  causes `Fun.finally` finalizers to be run and catch-all exception
  handlers to prevent termination.
  (Jacques-Henri Jourdan and Xavier Leroy, review by Damien Doligez,
  Guillaume Munch-Maccagnoni, Gabriel Scherer, and Enguerrand Decorne)

### Tools:

* #11004: Litmus tests for checking the implementation of the
  memory model.
  (Luc Maranget, review by Gabriel Scherer and Xavier Leroy)

### Manual and documentation:

### Compiler user-interface and warnings:

- #10909: Disable warning 59 (assignment to immutable blocks) unless flambda
  invariant checks are enabled.
  (Vincent Laviron, review by Gabriel Scherer)

- #10981: Implement a -cmi-file option for ocamlc and ocamlopt.
  (Sébastien Hinderer, review by Damien Doligez, Daniel Bünzli and
  Florian Angeletti)

* #11049: Stop padding 1-digit compiler minor version numbers.
  (So for instance OCaml 5.0 rather than 5.00)
  (Sébastien Hinderer, review by David Allsopp, Florian Angeletti and
  Xavier Leroy)

### Internal/compiler-libs changes:

- #10878, #10909: restore flambda after the Multicore merge.
  (Vincent Laviron, review by Gabriel Scherer and Xavier Leroy)

- #10864, #10888: restore afl-fuzz mode for sequential programs.
  (Jan Midtgaard, review by Xavier Leroy and Gabriel Scherer)

- #11008: rework GC statistics in the Multicore runtime